cmake_minimum_required(VERSION 3.9.2 FATAL_ERROR)

function(add_catalog_recursive catalog group_catalog source_files)
  file(GLOB children RELATIVE ${catalog} ${catalog}/*)
  foreach(child ${children})
    if(IS_DIRECTORY ${catalog}/${child})
      add_catalog_recursive(${catalog}/${child} ${group_catalog}/${child} ${source_files})
    else()
      get_filename_component(extension ${child} EXT)
      if (NOT extension STREQUAL "")
        if (USING_OBJC)
          string(REGEX MATCHALL "^.*.[h|m|mm|cpp]" out ${extension})
        else()
          string(REGEX MATCHALL "^.*.[h|cpp]" out ${extension})
        endif()
        if (NOT out STREQUAL "")
          if(MSVC)
            string(REPLACE "/" "\\" group_catalog_name ${group_catalog})
          else()
            set(group_catalog_name ${group_catalog})
          endif()
          set(filename ${catalog}/${child})
          source_group(${group_catalog_name} FILES ${filename})
          include_directories(${catalog})
          set(${source_files} ${${source_files}} ${filename})
        endif()
      endif()
    endif()
  endforeach()
  set(${source_files} ${${source_files}} PARENT_SCOPE)
endfunction(add_catalog_recursive)

project(soil2)
add_catalog_recursive(${PROJECT_SOURCE_DIR} / soil2_SOURCE)
add_library(${PROJECT_NAME} ${soil2_SOURCE})
