[package]

name = "soil2"
version = "0.1.0"
authors = ["VladasZ <146100@gmail.com>"]
links = "soil2"
build = "build.rs"
keywords = ["soil2", "ffi"]
description = "Low level binding for soil2 image library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/VladasZ/soil2.git"
homepage = "https://github.com/VladasZ/soil2"

[build-dependencies]
pkg-config = "0.3.19"
cmake = "0.1.45"

[dependencies]
libc = "0.2.42"